# simonpic_cjs

./: makeall
gscam/: CMakeLists.txt  README.txt
gscam/src/: gscam_simon.cpp
sp_sn/: CMakeLists.txt  mainpage.dox  manifest.xml~
sp_sn/launch/: ipcam.launch  ipcam2.launch  rviz.launch  sp_sn.launch  sp_sn.launch.bak01  sp_sn.launch.bak02  sp_sn.vcg  usbcam.launch
sp_sn/src/: image_subscriber.cpp
webots/controllers/human01/: human01  human01.c  human01.d
webots/controllers/human02/: human02  human02.c  human02.d
webots/controllers/joystick/: CMakeLists.txt  Makefile  joy.launch  joystick  joystick.cpp.bak  mainpage.dox  manifest.xml
webots/controllers/kinect_ros/: CMakeLists.txt  CMakeLists.txt_bak  CMakeLists.txt_bak02  kinect_ros  mjpeg_server.launch  mjpeg_server.launch_bak
webots/controllers/kinect_ros/src/: kinect_ros.c.bak  kinect_ros.cpp  kinect_ros.cpp_v2.0  kinect_ros.cpp_v3.0  kinect_ros.cpp_v4.0
webots/controllers/nao_demo/: .nao_demo.signature  nao_demo  nao_demo.c  nao_demo.d
webots/controllers/naoqi_for_webots/: Makefile  naoproxy.cpp  naoproxy.d  naoproxy.h  naoqi_for_webots  naoqi_for_webots.cpp  naoqi_for_webots.d  naoqi_for_webots.sln  naoqi_for_webots.vcproj  readme.html
webots/controllers/obstacle_avoidance_with_kinect_ptcamera/: .obstacle_avoidance_with_kinect.signature  obstacle_avoidance_with_kinect  obstacle_avoidance_with_kinect.d  obstacle_avoidance_with_kinect_ptcamera  obstacle_avoidance_with_kinect_ptcamera.c  obstacle_avoidance_with_kinect_ptcamera.d
webots/controllers/sn_env_camera02_ctr/: CMakeLists.txt  manifest.xml  sn_env_camera02_ctr  sn_env_camera02_ctr.cpp  sn_env_camera02_ctr_bak.cpp
webots/controllers/sn_env_camera03_ctr/: CMakeLists.txt  sn_env_camera03_ctr  sn_env_camera03_ctr.cpp
webots/protos/: Armchair.proto  Carpet.proto  Create.proto  HUMAN_STANDING.proto  HumanPlate.proto  PTCAMERA_INV.proto  PTCAMERA_NOR.proto  PTCAMERA_NOR.proto_org  Painting1.proto  Painting2.proto  Sofa2.proto
webots/worlds/: .SAR01_ptcam_proto_human.wbt.project  .SimonPiC_v0.1.wbt.project  .SimonPiC_v0.2.wbt.project  .SimonPiC_v0.3.wbt.project  .SimonPiC_v0.4.wbt.project  .SimonPiC_v0.5.wbt.project  .SimonPiC_v0.6.wbt.project  .joystick.wbt.project  .new.wbt.project  SAR01_ptcam_proto_human.wbt  SimonPiC_v0.2.wbt  SimonPiC_v0.3.wbt  SimonPiC_v0.4.wbt  SimonPiC_v0.5.wbt  SimonPiC_v0.6.wbt
